--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-  <title>Crowd</title>
+  <title>Block-bunnies</title>
 </head>
 
 <body>
